--- a/themes/MountainlandTheme/templates/components/ProductActions.html.twig
+++ b/themes/MountainlandTheme/templates/components/ProductActions.html.twig
@@ -5,7 +5,7 @@
 <div class="flex gap-3 my-4" data-controller="cart" data-cart-product-id-value="{{ productId }}" data-cart-uom-value="{{ uom }}">
     <twig:QuantityInput :value="quantity|default(1)" :min="1" name="quantity" data-cart-target="qtyInput" />
     <button class="flex-1 mcs-primary-button text-white font-semibold py-2 px-6 rounded-lg transition hover:opacity-90" data-action="click->cart#add">{{ actionLabel }}</button>
-    <button class="p-2 rounded-lg transition" style="background-color: #4d4d4d; color: white;" onmouseover="this.style.opacity='0.9'" onmouseout="this.style.opacity='1'">
+    <button class="p-2 rounded-lg transition hover:opacity-90" style="background-color: #4d4d4d; color: white;">
         <img src="{{ asset('var/assets/images/misc/star.webp') }}" alt="Save" class="w-6 h-6" />
     </button>
 </div>
