--- a/themes/MountainlandTheme/templates/components/ProductAvailability.html.twig
+++ b/themes/MountainlandTheme/templates/components/ProductAvailability.html.twig
@@ -1,7 +1,7 @@
 <div class="space-y-3 py-4 border-y border-gray-200">
     <div class="flex justify-between text-sm">
         <span class="text-gray-600">Item #:</span>
-        <span class="font-medium text-gray-900">{{ productId|default('ITEM-123456') }}</span>
+        <span class="font-medium text-gray-900">{{ productId|default('N/A') }}</span>
     </div>
     <div class="flex justify-between text-sm">
         <span class="text-gray-600">UPC:</span>
