--- a/themes/MountainlandTheme/templates/components/ProductSummary.html.twig
+++ b/themes/MountainlandTheme/templates/components/ProductSummary.html.twig
@@ -30,17 +30,17 @@
     {% endif %}
 
     <twig:ProductAvailability
-        {% if productId is defined %}:productId="productId"{% endif %}
-        {% if upc is defined %}:upc="upc"{% endif %}
-        {% if stockHome is defined %}:stockHome="stockHome"{% endif %}
-        {% if stockOther is defined %}:stockOther="stockOther"{% endif %}
-        {% if price is defined %}:price="price"{% endif %}
+        :productId="productId ?? null"
+        :upc="upc ?? null"
+        :stockHome="stockHome ?? null"
+        :stockOther="stockOther ?? null"
+        :price="price ?? null"
     />
 
     <twig:ProductActions
         :quantity="quantity|default(1)"
         addToCartText="{{ addToCartText|default('Add to Cart') }}"
-        {% if cartProductId is defined %}:cartProductId="cartProductId"{% endif %}
+        :cartProductId="cartProductId ?? null"
         cartUom="{{ cartUom|default('ea') }}"
     />
 
