adjust gallery styling

--- a/templates/components/Gallery.html.twig
+++ b/templates/components/Gallery.html.twig
@@ -1,5 +1,5 @@
 <div class="space-y-4">
-    <div class="aspect-square w-full bg-gray-100 rounded-lg overflow-hidden">
+    <div class="aspect-square w-1/2 mx-auto bg-gray-100 rounded-lg overflow-hidden">
         <img src="{{ asset(mainImage ?? 'var/assets/images/misc/camera.webp') }}" alt="Product Image" class="w-full h-full object-cover" />
     </div>
     <div class="grid grid-cols-5 gap-2">
