--- a/themes/MountainlandTheme/templates/product/product-detail.html.twig
+++ b/themes/MountainlandTheme/templates/product/product-detail.html.twig
@@ -16,10 +16,8 @@
 
         <hr class="my-6 border-gray-300" />
 
-        <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
-            <div class="bg-white rounded-lg border border-gray-200 p-4 shadow-sm">
-                <twig:Gallery />
-            </div>
+        <div class="grid grid-cols-1 lg:grid-cols-[400px_1fr] gap-8 items-start">
+            <twig:Gallery />
 
             <div class="bg-white rounded-lg border border-gray-200 p-6 shadow-sm">
                 <twig:ProductSummary
