--- a/themes/MountainlandTheme/templates/components/ProductActions.html.twig
+++ b/themes/MountainlandTheme/templates/components/ProductActions.html.twig
@@ -2,10 +2,15 @@
 {% set productId = cartProductId|default('') %}
 {% set uom = cartUom|default('ea') %}
 
-<div class="flex gap-3 my-4" data-controller="cart" data-cart-product-id-value="{{ productId }}" data-cart-uom-value="{{ uom }}">
-    <twig:QuantityInput :value="quantity|default(1)" :min="1" name="quantity" data-cart-target="qtyInput" />
-    <button class="flex-1 mcs-primary-button text-white font-semibold py-2 px-6 rounded-lg transition hover:opacity-90" data-action="click->cart#add">{{ actionLabel }}</button>
-    <button class="p-2 rounded-lg transition hover:opacity-90" style="background-color: #4d4d4d; color: white;">
-        <img src="{{ asset('var/assets/images/misc/star.webp') }}" alt="Save" class="w-6 h-6" />
-    </button>
+<div data-controller="cart" data-cart-product-id-value="{{ productId }}" data-cart-uom-value="{{ uom }}">
+    <div class="flex gap-3 my-4">
+        <twig:QuantityInput :value="quantity|default(1)" :min="1" name="quantity" data-cart-target="qtyInput" />
+        <button class="flex-1 mcs-primary-button text-white font-semibold py-2 px-6 rounded-lg transition hover:opacity-90 flex flex-col items-center justify-center" data-action="click->cart#add">
+            <span>{{ actionLabel }}</span>
+            <span class="hidden text-xs font-normal mt-1" data-cart-target="inCartMessage"></span>
+        </button>
+        <button class="p-2 rounded-lg transition hover:opacity-90" style="background-color: #4d4d4d; color: white;">
+            <img src="{{ asset('var/assets/images/misc/star.webp') }}" alt="Save" class="w-6 h-6" />
+        </button>
+    </div>
 </div>
