--- a/themes/MountainlandTheme/templates/components/ProductSummary.html.twig
+++ b/themes/MountainlandTheme/templates/components/ProductSummary.html.twig
@@ -34,7 +34,10 @@
         :upc="upc ?? null"
         :stockHome="stockHome ?? null"
         :stockOther="stockOther ?? null"
-        :price="price ?? null"
+    />
+
+    <twig:ProductPrice
+        :productId="productId ?? null"
     />
 
     <twig:ProductActions
