--- a/themes/MountainlandTheme/templates/layout.html.twig
+++ b/themes/MountainlandTheme/templates/layout.html.twig
@@ -37,7 +37,7 @@
 
     {% block head %}{% endblock %}
 </head>
-<body>
+<body data-controller="price-loader">
     <header id="header" data-turbo-permanent>
         {{ include('partials/_header.html.twig') }}
     </header>
