--- a/themes/MountainlandTheme/templates/cart/_cart_item.html.twig
+++ b/themes/MountainlandTheme/templates/cart/_cart_item.html.twig
@@ -10,7 +10,7 @@
         <div class="item-row">
             <div>
                 <h3>
-                    <a href="{{ path('product_detail', {'productId': item.product.productId}) }}" data-turbo-frame="_top">{{ item.product.name }}</a>
+                    <a href="{{ path('pimcore_element', {'element': item.product}) }}" data-turbo-frame="_top">{{ item.product.name }}</a>
                 </h3>
                 <p class="item-meta">SKU: {{ item.product.productId }}</p>
                 <div class="pill-row">
