--- a/themes/MountainlandTheme/templates/components/ProductActions.html.twig
+++ b/themes/MountainlandTheme/templates/components/ProductActions.html.twig
@@ -5,12 +5,12 @@
 <div data-controller="cart" data-cart-product-id-value="{{ productId }}" data-cart-uom-value="{{ uom }}">
     <div class="flex gap-3 my-4">
         <twig:QuantityInput :value="quantity|default(1)" :min="1" name="quantity" data-cart-target="qtyInput" />
-        <button class="flex-1 mcs-primary-button text-white font-semibold py-2 px-6 rounded-lg transition hover:opacity-90 flex flex-col items-center justify-center" data-action="click->cart#add">
-            <span>{{ actionLabel }}</span>
-            <span class="hidden text-xs font-normal mt-1" data-cart-target="inCartMessage"></span>
+        <button class="flex-1 mcs-primary-button text-white font-semibold py-2 px-6 rounded-lg transition hover:opacity-90" data-action="click->cart#add">
+            {{ actionLabel }}
         </button>
         <button class="p-2 rounded-lg transition hover:opacity-90" style="background-color: #4d4d4d; color: white;">
             <img src="{{ asset('var/assets/images/misc/star.webp') }}" alt="Save" class="w-6 h-6" />
         </button>
     </div>
+    <div class="hidden text-sm text-gray-600 -mt-2 mb-4" data-cart-target="inCartMessage"></div>
 </div>
