--- a/themes/MountainlandTheme/templates/components/ProductAvailability.html.twig
+++ b/themes/MountainlandTheme/templates/components/ProductAvailability.html.twig
@@ -9,10 +9,12 @@
         <span class="font-medium text-gray-900">{{ modelNumber }}</span>
     </div>
     {% endif %}
+    {% if upc %}
     <div class="flex justify-between text-sm">
         <span class="text-gray-600">UPC:</span>
-        <span class="font-medium text-gray-900">{{ upc|default('UPC-9876543210') }}</span>
+        <span class="font-medium text-gray-900">{{ upc }}</span>
     </div>
+    {% endif %}
     <div class="flex justify-between items-center text-sm">
         <span class="text-gray-600">Home:</span>
         <span class="flex items-center gap-2">
