--- a/themes/MountainlandTheme/templates/cart/_cart_item.html.twig
+++ b/themes/MountainlandTheme/templates/cart/_cart_item.html.twig
@@ -20,7 +20,7 @@
                     <span class="pill">{{ item.product.brandName }}</span>
                 </div>
             </div>
-            <span class="item-price">{{ item.price|number_format(2, '.', ',') }} / {{ item.quantityOrdered.uom }}</span>
+            <span class="item-price">${{ item.price|number_format(2, '.', ',') }} / {{ item.quantityOrdered.uom }}</span>
         </div>
         <div class="item-row item-actions">
             <div class="qty-control">
