--- a/themes/MountainlandTheme/templates/cart/_cart_list_frame.html.twig
+++ b/themes/MountainlandTheme/templates/cart/_cart_list_frame.html.twig
@@ -28,30 +28,6 @@
             </section>
         </div>
 
-        <aside class="cart-sidebar">
-            <div class="card">
-                <h2>Order Summary</h2>
-                <div class="summary-row">
-                    <span>Subtotal</span>
-                    <span id="summary-subtotal">{{ cart.subTotal|number_format(2, '.', ',') }}</span>
-                </div>
-                <div class="summary-row">
-                    <span>Shipping</span>
-                    <span id="summary-shipping" style="font-style: italic; font-size: 0.9rem;">Calculated on next page</span>
-                </div>
-                <div class="summary-row">
-                    <span>Tax (est.)</span>
-                    <span id="summary-tax">{{ cart.tax|number_format(2, '.', ',') }}</span>
-                </div>
-                <hr />
-                <div class="summary-row total">
-                    <span>Total</span>
-                    <span id="summary-total">{{ cart.totalDue|number_format(2, '.', ',') }}</span>
-                </div>
-                <a href="{{ path('checkout') }}" class="btn-primary full" data-turbo-frame="_top">Proceed to Checkout</a>
-                <a href="{{ path('home') }}" class="btn-secondary full">Continue Shopping</a>
-            </div>
-            <a href="#" class="return-policy-link">View Return Policy</a>
-        </aside>
+        {% include 'cart/_cart_summary.html.twig' with {'cart': cart} %}
     </div>
 </turbo-frame>
