--- a/themes/MountainlandTheme/templates/components/ProductPrice.html.twig
+++ b/themes/MountainlandTheme/templates/components/ProductPrice.html.twig
@@ -9,7 +9,7 @@
 <div class="text-3xl font-bold text-gray-900 my-4">
     <span
         class="price-tag price-target-{{ productId }}_{{ uom }}"
-        data-price-loader-target="placeholder"
+        data-price-loader-target="price"
         data-id="{{ productId }}_{{ uom }}"
     >{{ price|default('-') }}</span>
 </div>
