--- a/themes/MountainlandTheme/templates/home/home.html.twig
+++ b/themes/MountainlandTheme/templates/home/home.html.twig
@@ -32,7 +32,7 @@
             <img src="{{ asset('images/branding/divisions.png') }}" alt="{{ productTypes|length }} DIVISIONS BUILT TO SERVE YOU"/>
             <div class="divisions-grid" data-home-target="divisionsGrid">
                 {% for productType in productTypes %}
-                    <div class="division-box{% if loop.index > 8 %} hidden{% endif %}" style="background-image:url('{{ asset(productType.image) }}');">
+                    <div class="division-box{% if loop.index > 8 %} hidden{% endif %}"{% if productType.image %} style="background-image:url('{{ asset(productType.image) }}');"{% endif %}>
                         <div class="division-box-content"><h3>{{ productType.name }}</h3><hr><p class="shop-now">Shop Now</p></div>
                     </div>
                 {% endfor %}
