--- a/public/css/style.css
+++ b/public/css/style.css
@@ -796,3 +796,12 @@ header ul {
 header ul li {
   margin-bottom: 0;
 }
+
+/* Category Grid Toggle Styles */
+.division-box.hidden {
+    display: none;
+}
+
+.divisions-grid.expanded .division-box.hidden {
+    display: flex;
+}
