--- a/themes/MountainlandTheme/templates/cart/_cart_item.html.twig
+++ b/themes/MountainlandTheme/templates/cart/_cart_item.html.twig
@@ -10,14 +10,17 @@
         <div class="item-row">
             <div>
                 <h3>
-                    <a href="{{ path('product_detail', {'productId': item.product.productId}) }}" data-turbo-frame="_top">{{ item.product.name }}</a>
+                    <a href="{{ path('pimcore_element', {
+                        'element': item.product,
+                        'uom': item.quantityOrdered.uom
+                    }) }}" data-turbo-frame="_top">{{ item.product.name }}</a>
                 </h3>
                 <p class="item-meta">SKU: {{ item.product.productId }}</p>
                 <div class="pill-row">
                     <span class="pill">{{ item.product.brandName }}</span>
                 </div>
             </div>
-            <span class="item-price">{{ item.price|number_format(2, '.', ',') }} / {{ item.quantityOrdered.uom }}</span>
+            <span class="item-price">${{ item.price|number_format(2, '.', ',') }} / {{ item.quantityOrdered.uom }}</span>
         </div>
         <div class="item-row item-actions">
             <div class="qty-control">
@@ -38,7 +41,7 @@
             <button class="btn-link remove-item"
                     data-cart-target="removeBtn"
                     data-action="click->cart#remove">Remove</button>
-            <span class="item-subtotal">{{ item.extendedPrice|number_format(2, '.', ',') }}</span>
+            <span class="item-subtotal">${{ item.extendedPrice|number_format(2, '.', ',') }}</span>
         </div>
     </div>
 </article>
